# hongshi_patrol_robot

./: .gitignore  README.md  build.sh  pyproject.toml
livox_ros_driver2/: CMakeLists.txt  README.md
livox_ros_driver2/config/: MID360_config.json  MID360s_config.json
livox_ros_driver2/launch/: mid360s_custom.launch.py
livox_ros_driver2/launch_ROS2/: msg_MID360s_launch.py
mid360_preprocess/: CMakeLists.txt  LICENSE  package.xml
mid360_preprocess/src/: mid360_preprocess_node.cpp
mobile_platform/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
mobile_platform/launch/: _mobile_platform_launch_helpers.py  robot320_ros2.launch.py
mobile_platform/mobile_platform/: __init__.py  ackermann.py  can_types.py  cli.py  controlcan.py  fastdds_node.py  fastdds_ros_gateway.py  messages.py  onboard_node.py  protocol.py  robot320.py  ros2_node.py  safety.py  transport.py
mobile_platform/test/: test_ackermann.py  test_fastdds_bridge.py  test_fastdds_ros_gateway.py
remote_control/: MANIFEST.in  README.md  package.xml  setup.py
remote_control/launch/: robot320_remote_watch.launch.py
remote_control/remote_control/: __init__.py  cli.py  dds_client.py  fastdds_client.py  gui.py  gui_model.py  ros2_client.py  ros2_transport.py
remote_control/test/: test_fastdds_client.py  test_gui_model.py
robot320_interfaces/: README.md  package.xml  setup.cfg  setup.py
robot320_interfaces/robot320_interfaces/: __init__.py  fastdds_transport.py  messages.py  transport.py
robot320_interfaces/robot320_interfaces/dds/: Robot320Dds.idl  Robot320String.idl  __init__.py
robot320_interfaces/scripts/: generate_fastdds_types.sh
robot320_interfaces/test/: test_fastdds_transport.py  test_messages.py
robot320_localization_bringup/: README.md  package.xml  setup.cfg  setup.py
robot320_localization_bringup/config/: mid360_2d.lua  mid360_localization.lua  nav2_ackermann.yaml
robot320_localization_bringup/launch/: robot320_nav2.launch.py  robot320_slam.launch.py
robot320_localization_bringup/robot320_localization_bringup/: __init__.py
scripts/: setup_fastdds.sh  uv_run.sh  uv_setup.sh
video_relay/: .gitignore  README.md  __init__.py
video_relay/local/: .env.example  client.py  requirements.txt  web_viewer.py
video_relay/robot/: .env.example  __init__.py  hikvision-local-rtsp@.service  hikvision-ptz-agent@.service  hikvision-video-relay@.service  local_rtsp_proxy.py  ptz_agent.py  push_stream.py
video_relay/server/: .env.example  docker-compose.yml  mediamtx.yml
video_relay/tests/: test_client.py  test_ptz_agent.py  test_push_stream.py  test_web_viewer_ptz.py
