[project]
name = "hongshi-patrol-robot"
version = "0.1.0"
description = "Unified uv environment for the Robot320 NUC and remote controller"
requires-python = ">=3.10,<3.15"
dependencies = [
  "robot320-interfaces",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.5",
  "remote-control",
]
nuc = [
  "mobile-platform",
  "robot320-localization-bringup",
]

[dependency-groups]
dev = [
  "mobile-platform",
  "pytest>=8.0",
  "remote-control",
  "robot320-localization-bringup",
  "ruff>=0.8",
]

[tool.uv]
package = false
default-groups = []
required-version = ">=0.9.0"

[tool.uv.sources]
robot320-interfaces = { path = "./robot320_interfaces", editable = true }
remote-control = { path = "./remote_control", editable = true }
mobile-platform = { path = "./mobile_platform", editable = true }
robot320-localization-bringup = { path = "./robot320_localization_bringup", editable = true }
