<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_platform</name>
  <version>0.1.0</version>
  <description>
    Robot320 mobile platform onboard side: CAN bus chassis control, safety
    gating, semantic command/telemetry messaging, ROS 2 bridge and FastDDS
    bridge skeleton.
  </description>

  <maintainer email="hongshi-agent@example.com">Hongshi Agent Contributors</maintainer>
  <license>MIT</license>

  <!-- ament_python is the build system for pure-Python ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime ROS 2 Python dependencies used by ros2_node.py -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>robot320_interfaces</exec_depend>

  <!-- Launch system for robot320_ros2.launch.py -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- Used by the launch file to locate the installed console script. -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Test harness -->
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
