<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot320_interfaces</name>
  <version>0.1.0</version>
  <description>Robot320 JSON messages and ROS 2 compatible Fast DDS wire contract.</description>
  <maintainer email="hongshi-agent@example.com">Hongshi Agent Contributors</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
